package model;

public interface IActive {
    void tick(double dT);
}